feat(dashboards): add the last 30 days endpoint
